Day5/declarative-scripts/mysql-ephemeralv2.0/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
     containers:
     - image: bitnami/mysql:latest
       name: mysql
