Day5/declarative-scripts/mysql-ephemeralv2.0/mysql-lb-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql
  name: mysql
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mysql
  type: LoadBalancer
status:
  loadBalancer: {}
