Day5/declarative-scripts/mysql-ephemeralv2.0/mysql-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: mysql
  name: mysql
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: mysql
    weight: null
status: {}
